--- a/Frontend/hello/templates/Base/navbar.html
+++ b/Frontend/hello/templates/Base/navbar.html
@@ -4,11 +4,11 @@
     let text = document.getElementById("searchText").value;
     let location;
     if (window.location.pathname.includes("users") || window.location.pathname.includes("employee") || window.location.pathname.includes("AD"))
-      location = "users"
+      location = "profile"
     else if (window.location.pathname.includes("computers"))
-      location = "computers"
+      location = "computer"
     else if (window.location.pathname.includes("groups"))
-      location = "groups"
+      location = "group"
     window.location.href = '/search/'+location +'/'+ text;
   }
   function trySearchtext() {
