--- a/Frontend/hello/templates/active_directory/index.html
+++ b/Frontend/hello/templates/active_directory/index.html
@@ -21,7 +21,7 @@
             let domain = encodeURIComponent("{{ domain }}");
             try {
 
-                var result = await fetch(`https://localhost:7095/HideMailBox?id=${id}&domain=${domain}`);
+                var result = await fetch(`https://192.168.31.69:7095/HideMailBox?id=${id}&domain=${domain}`);
 
                 body.innerText = "Почтовый ящик был успешно скрыт";
             } catch {
@@ -41,7 +41,7 @@
             let domain = encodeURIComponent("{{ domain }}");
             try {
 
-                var result = await fetch(`https://localhost:7095/ShowMailBox?id=${id}&domain=${domain}`);
+                var result = await fetch(`https://192.168.31.69:7095/ShowMailBox?id=${id}&domain=${domain}`);
 
                 body.innerText = "Почтовый ящик снова показан";
             } catch {
@@ -62,7 +62,7 @@
             let body = document.getElementById("banModalBody");
             try {
 
-                var result = await fetch(`https://localhost:7095/BanUser?id=${id}&domain=${domain}`).then(response => response.json());
+                var result = await fetch(`https://192.168.31.69:7095/BanUser?id=${id}&domain=${domain}`).then(response => response.json());
 
             } catch (error) {
                 console.warn(error)
@@ -84,7 +84,7 @@
             let domain = encodeURIComponent("{{ domain }}");
             try {
 
-                var result = await fetch(`https://localhost:7095/UnbanUser?id=${id}&domain=${domain}`).then(response => response.json());
+                var result = await fetch(`https://192.168.31.69:7095/UnbanUser?id=${id}&domain=${domain}`).then(response => response.json());
 
                 body.innerText = "Пользователя удалось разблокировать";
             } catch (error) {
@@ -105,7 +105,7 @@
                 let groupName = document.getElementById("group-name-add").value;
                 let id = encodeURIComponent("{{ id }}");
                 let domain = encodeURIComponent("{{ domain }}");
-                var result = await fetch(`https://localhost:7095/AddToGroup`, {
+                var result = await fetch(`https://192.168.31.69:7095/AddToGroup`, {
                     method: "POST",
                     headers: new Headers({
                         'content-Type': 'application/json'
@@ -137,7 +137,7 @@
                 let groupName = document.getElementById("group-name-rem").value;
                 let id = encodeURIComponent("{{ id }}");
                 let domain = encodeURIComponent("{{ domain }}");
-                var result = await fetch(`https://localhost:7095/RemoveFromGroup`, {
+                var result = await fetch(`https://192.168.31.69:7095/RemoveFromGroup`, {
                     method: "POST",
                     headers: new Headers({
                         'content-Type': 'application/json'
@@ -169,7 +169,7 @@
                 let Passw = document.getElementById("password-field").value;
                 let id = encodeURIComponent("{{ id }}");
                 let domain = encodeURIComponent("{{ domain }}");
-                var result = await fetch(`https://localhost:7095/ChangePassword`, {
+                var result = await fetch(`https://192.168.31.69:7095/ChangePassword`, {
                     method: "POST",
                     headers: new Headers({
                         'content-Type': 'application/json'
@@ -241,7 +241,7 @@
                 {% if profile is None %}
                     <H2 class="w-100 mb-3">Нет профиля</H2>
                 {% else %}
-                    <H2 class="w-100 mb-3 text-primary"  ><a href="/employee/{{profile.id}}">{{ profile.source.surname }} {{ profile.source.name }} {{ profile.source.patronymic}}</a></H2>
+                    <H2 class="w-100 mb-3 text-primary"  ><a href="/employee/{{profile.id}}">{{ profile.surname }} {{ profile.name }} {{ profile.patronymic}}</a></H2>
                 {% endif %}
                 <H2 class="w-100 mb-3">Учётная запись Active Directory: {{domain}}\{{id}}</H2>
 
@@ -452,7 +452,7 @@
                             <select class="form-select" id="group-name-add" aria-label="Default select example">
                                 <option selected>Выберите группу</option>
                                 {% for group in groups %}
-                                <option value="{{ group.source.Name }}">{{ group.source.Name }}</option>
+                                <option value="{{ group.name }}">{{ group.name }}</option>
                                 {% endfor %}
                               </select>
                             <span id="addGroupStatus"></span>
