--- a/Frontend/hello/templates/employee/index.html
+++ b/Frontend/hello/templates/employee/index.html
@@ -59,6 +59,7 @@
           {% else %}
           <img width="200" height="200" src="{% static 'media/employee_avatars/'%}{{profile_json.imgSrc}}">{% endif %}
           <div class="col"> {{profile_json.surname}} {{profile_json.name}} {{profile_json.patronymic}}</div>
+          <div> {{profile_json.id}}</div>
           <div>
             <button type="button" data-toggle="modal" data-target="#changeProfilePicModal" class="btn btn-outline-primary w-100 m-1"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
               <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
@@ -107,7 +108,7 @@
                 <div class="col-3 ">{{profile_json.city}} </div>
               </div>
               <div class="w-100 border-top"></div>
-              {% if 'None' not in profile_json.fire_date %}
+              {% if profile_json.fireDate %}
               <div class="col row">
                 <div class="col-4">Дата увольнения</div>
                 <div class="col-1 text-danger" style="width: 50%;">{{profile_json.fireDate |date:"d.m.Y H:i:s"}} </div>
