--- a/Frontend/hello/templates/active_directory/index.html
+++ b/Frontend/hello/templates/active_directory/index.html
@@ -21,7 +21,7 @@
             let id = encodeURIComponent("{{ id }}");
             let domain = encodeURIComponent("{{ domain }}");
             try {
-                var result = await fetch(`/hideMail`);
+                var result = await fetch(id+`/hideMail`);
                 //var result = await fetch(`https://192.168.31.69:7095/HideMailBox?id=${id}&domain=${domain}`);
 
                 body.innerText = "Почтовый ящик был успешно скрыт";
